# player-server

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt
cmake/cmlib/: .cmake-format  .gitmodules  CMLibBuildTypes.cmake  CMLibCPack.cmake  CMLibCodeAnalysisClangAnalyze.cmake  CMLibCodeAnalysisClangTidy.cmake  CMLibCodeAnalysisClazy.cmake  CMLibCodeAnalysisPvsStudio.cmake  CMLibCommonTargetProperties.cmake  CMLibCompiler.cmake  CMLibCompilerFeaturesHPPGenerate.cmake  CMLibCompilerFlags.cmake  CMLibConfigHPPGenerate.cmake  CMLibCotire.cmake  CMLibDocDoxygen.cmake  CMLibFlagRemove.cmake  CMLibFormatSources.cmake  CMLibGlobalVariables.cmake  CMLibLSBInfo.cmake  CMLibNinjaGeneratorHelper.cmake  CMLibRequiredVariables.cmake  Makefile
cmake/cmlib/pc/: lib-header-only.pc.in  lib.pc.in
cmake/doc/: Doxyfile.in
cmake/etc/: Variables.cmake
cmake/etc/uncrustify/: README.md  classheader.txt  default.cfg
cmake/find/: FindGEOS.cmake  FindMathGL.cmake  FindQuadmath.cmake  FindQwtPlot3D.cmake  FindQwtPolar.cmake
cmake/generators/: .gitlab-ci.yml  README.md
files/etc/: player-server.conf
l10n/: player-server_ru_RU.ts
src/player-server/: CMakeLists.txt  application.cpp  application.hpp  base_reader.cpp  base_reader.hpp  base_server.cpp  base_server.hpp  config.hpp  config_flags.hpp.in  file_format.hpp  main.cpp  player.cpp  player.hpp  surok_adsb_reader.cpp  surok_adsb_reader.hpp  surok_adsb_server.cpp  surok_adsb_server.hpp  surok_marks_reader.cpp  surok_marks_reader.hpp  surok_marks_server.cpp  surok_marks_server.hpp
